--- a/skilllink-fe/package.json
+++ b/skilllink-fe/package.json
@@ -9,7 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.5.2",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -23,6 +24,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "resolutions": {
+    "postcss": "^8.4.31"
   },
   "browserslist": {
     "production": [
